add html code for game section adjust js for html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <!-- fine sezione per la selezione del livello di gioco -->
 
             <!-- inizio sezione di gioco -->
-            <section>
-
+            <section id="game" class="text-center">
+                <h2 class="uppercase">Inserisci il tuo numero</h2>
+                <input type="number" id="user-number">
+                <button id="btn-game" class="uppercase">Gioca!</button>
             </section>
             <!-- fine sezione di gioco -->
 
