--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <!-- inizio sezione per la selezione del livello di gioco -->
-            <section id="game-lvl" class="text-center">
+            <section id="game-lvl" class="text-center pt-1">
                 <h2 class="uppercase">Seleziona il livello desiderato</h2>
                 <label for="level" class="d-block mt-3 mb-1 uppercase">Inserire il livello desiderato</label>
                 <input type="number" min="0" max="2" id="level">
@@ -24,16 +24,15 @@
             <!-- fine sezione per la selezione del livello di gioco -->
 
             <!-- inizio sezione di gioco -->
-            <section id="game" class="text-center">
-                <h2 class="uppercase">Inserisci il tuo numero</h2>
+            <section id="game" class="d-none">
+                <h2 class="uppercase mb-3">Inserisci il tuo numero</h2>
                 <input type="number" id="user-number">
                 <button id="btn-game" class="uppercase">Gioca!</button>
+                <hr>
+                <h3 class="uppercase mt-3 mb-1">L'utente ha già inserito i seguenti numeri</h3>
+                <div id="added-numbers"></div>
             </section>
             <!-- fine sezione di gioco -->
-
-
-
-
 
         </div>
         <!-- fine container interno -->
@@ -42,7 +41,10 @@
     <!-- fine contenitore principale -->
 
     <!-- inizio contenitore per esplosione -->
-    <div id="esplosione" class="d-none"></div>
+    <div id="esplosione" class="d-none">
+        <div id="user-score" class="mb-1">Sei riuscito a trovare </div>
+        <img src="img/boom.png" alt="boom">
+    </div>
     <!-- fine contenitore per esplosione -->
 
 
