--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h2 class="uppercase mb-3">Inserisci il tuo numero</h2>
                 <input type="number" id="user-number">
                 <button id="btn-game" class="uppercase">Gioca!</button>
-                <hr>
-                <h3 class="uppercase mt-3 mb-1">L'utente ha già inserito i seguenti numeri</h3>
+                <hr class="mt-3">
+                <h3 class="uppercase mt-3 mb-1 d-none">L'utente ha già inserito i seguenti numeri</h3>
                 <div id="added-numbers"></div>
             </section>
             <!-- fine sezione di gioco -->
@@ -46,6 +46,8 @@
         <img src="img/boom.png" alt="boom">
     </div>
     <!-- fine contenitore per esplosione -->
+
+    <div id="win" class="d-none"></div>
 
 
     <!-- collegamento JS -->
