--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="number" id="user-number">
                 <button id="btn-game" class="uppercase">Gioca!</button>
                 <hr class="mt-3">
-                <h3 class="uppercase mt-3 mb-1 d-none">L'utente ha già inserito i seguenti numeri</h3>
+                <h3 id="number-title" class="uppercase mt-3 mb-1 d-none">L'utente ha già inserito i seguenti numeri</h3>
                 <div id="added-numbers"></div>
             </section>
             <!-- fine sezione di gioco -->
