add some more graphic elements

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 
     <!-- inizio contenitore per esplosione -->
     <div id="esplosione" class="d-none">
-        <div id="user-score" class="mb-1">Sei riuscito a trovare </div>
+        <div class="score-container">
+            <div id="user-score" class="mt-1">Sei riuscito a trovare </div>
+            <div id="percentage" class="mb-1">Sei riuscito a trovare </div>
+        </div>
         <img src="img/boom.png" alt="boom">
     </div>
     <!-- fine contenitore per esplosione -->
